# pymmdocs

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  pyproject.toml
pymm-docs/: mkdocs.yml  pymmcore-plus-ecosystem.md  pyproject.toml
pymm-docs/docs/: _global_hooks.py  demo.md  index.md  quickstart.md  tags.md
pymm-docs/docs/javascripts/: termynal.js
pymm-docs/docs/quickstart/: 1_gui.md  2_library.md  3_developer.md  index.md
pymm-docs/docs/reference/: index.md
pymm-docs/docs/reference/pymmcore_plus/core/: CMMCorePlus.md
pymm-docs/docs/styles/: dark_modern.css  extra.css  termynal.css
pymm-home/: package-lock.json  package.json
pymm-home/src/components/: CTA.astro  CodePreview.astro  Contributors.astro  Ecosystem.astro  Features.astro  Footer.astro  Header.astro  Hero.astro  QuickstartChoice.astro
pymm-home/src/layouts/: Layout.astro
pymm-home/src/pages/: index.astro  python-developer.astro
