[project]
name = "pymmcore-docs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pymmcore-plus",
    "pymmcore-gui",
    "pymmcore-widgets",
    "useq-schema",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-gen-files>=0.5.0",
]

[dependency-groups]
dev = [
    "mkdocs-api-autonav>=0.2.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-monorepo-plugin>=1.1.0",
    "mkdocs-spellcheck[all]>=1.1.1",
    "mkdocs-typer>=0.0.3",
    "pre-commit>=4.2.0",
    "ruff>=0.11.9",
    "typer>=0.16.0",
    "types-markdown>=3.8.0.20250415",
]

[tool.uv]
override-dependencies = [
    "mkdocstrings-python>=1.16.10",
    "mkdocstrings>=0.29.1",
    "mkdocs-autorefs>=1.4",
]

[tool.uv.sources]
pymmcore-plus = { workspace = true }
pymmcore-gui = { workspace = true }
pymmcore-widgets = { workspace = true }
useq-schema = { workspace = true }

[tool.uv.workspace]
members = ["pymm-docs/submodules/*"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "RUF",
    "TC",
    "TID",
]
